kubernetes/ingress-controller/my-ingress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-ip
spec:
  ingressClassName: nginx
  rules:
  - host: "127.0.0.1"  # 使用 IP 地址作为 host
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 18080
