kubernetes/ingress-controller/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
      - host: "myapp.example.com"
        http:
          paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 18080
